tests/ui/closures/2229_closure_analysis/capture-analysis-4.stderr
error: First Pass analysis includes:
  --> $DIR/capture-analysis-4.rs:20:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = a.b;
...  |
LL | |     };
   | |_____^
   |
note: Capturing a[(0, 0)] -> ByValue
  --> $DIR/capture-analysis-4.rs:23:18
   |
LL |         let _x = a.b;
   |                  ^^^
note: Capturing a[(0, 0),(0, 0)] -> Immutable
  --> $DIR/capture-analysis-4.rs:26:26
   |
LL |         println!("{:?}", a.b.c);
   |                          ^^^^^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-4.rs:20:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = a.b;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture a[(0, 0)] -> ByValue
  --> $DIR/capture-analysis-4.rs:23:18
   |
LL |         let _x = a.b;
   |                  ^^^

error: aborting due to 2 previous errors

